--- a/app/src/app/top-bar/top-bar.component.html
+++ b/app/src/app/top-bar/top-bar.component.html
@@ -11,7 +11,7 @@
     <span class="nav-item">
         Account
     </span>
-    <button type="button" class="new-issue">
+    <!--<button type="button" id="new-issue">
         New Issue
-    </button>
+    </button>-->
 </div>
