--- a/app/src/app/issue/issue.component.css
+++ b/app/src/app/issue/issue.component.css
@@ -21,5 +21,10 @@
     height: 0.6rem;
     border-radius: 100%;
     border: 1px solid;
-    margin-right: 0.5rem;
+    margin-right: 0.3rem;
+}
+
+.dropdown-item a {
+    display: inline-block;
+    width: 100%;
 }
