--- a/app/src/app/issues-view/issues-view.component.css
+++ b/app/src/app/issues-view/issues-view.component.css
@@ -45,8 +45,9 @@
     flex-grow: 1;
     text-align: left;
     margin: 0 1rem 0 1rem;
-    font-size: x-large;
+    font-family: Arial, Helvetica, sans-serif;
     font-weight: lighter;
+    font-size: 1.2rem;
 }
 
 .title a {
@@ -59,10 +60,6 @@
 
 .delete {
     margin-right: 0.5rem;
-    /*font-family: Arial, Helvetica, sans-serif;*/
-    /*font-family: monospace;
-    font-weight: bold;
-    font-size: 1rem;*/
 }
 
 .delete a {
