--- a/app/src/app/categories-view/categories-view.component.html
+++ b/app/src/app/categories-view/categories-view.component.html
@@ -4,9 +4,10 @@
             <span class="category-badge" [ngStyle]="{'background-color': category.color}"></span>
             <span class="category">{{category.name}}</span>
         </a>
+        <span class="control-button delete-button" *ngIf="editMode"><a (click)="deleteCategory(category)"><i class="fa-solid fa-xmark fa-fw"></i></a></span>
     </li>
     <div class="controls">
-        <a class="control-button"><i class="fa-solid fa-plus fa-fw"></i></a>
-        <a class="control-button"><i class="fa-solid fa-minus fa-fw"></i></a>
+        <a class="control-button" [routerLink]="['detail']"><i class="fa-solid fa-plus fa-fw"></i></a>
+        <a class="control-button" (click)="toggleEdit()"><i class="fa-solid fa-minus fa-fw"></i></a>
     </div>
 </ul>
