Implemented basic dashboard

--- a/app/src/app/top-bar/top-bar.component.html
+++ b/app/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <h2>Issue Tracker</h2>
 <div class="navigation">
     <span class="nav-item">
-        Dashboard
+        <a routerLink="/dashboard">Dashboard</a>
     </span>
     <span class="nav-item">
         <a routerLink="/issues">Issues</a>
