--- a/app/src/app/issue/issue.component.html
+++ b/app/src/app/issue/issue.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="issue">
+<div *ngIf="issue && issueUser">
     <div class="issue-details">
         <label for="title">Title:</label>
         <input type="text" class="text-field" id="title" name="title" [(ngModel)]="issue.title">
     </div>
     <div class="issue-details">
         <label for="creator">Creator:</label>
-        <input type="text" class="text-field" id="creator" readonly [(ngModel)]="issue.creator">
+        <input type="text" class="text-field" id="creator" readonly [(ngModel)]="issueUser.name">
     </div>
     <div class="issue-details">
         <label for="priority">Priority:</label>
