--- a/app/src/app/dashboard/dashboard.component.css
+++ b/app/src/app/dashboard/dashboard.component.css
@@ -8,7 +8,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    right: 12rem;
+    right: 0;
     height: 2rem;
     font-family: "Roboto" sans-serif;
     font-size: 1.3rem;
@@ -34,9 +34,65 @@
     top: 3rem;
     display: flex;
     flex-wrap: wrap;
-    margin-right: 12rem;
 }
 
+.category-card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid;
+    border-radius: 2px;
+    align-items: center;
+    width: 14rem;
+    overflow: hidden;
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
+    padding: 0.5rem;
+    /*padding-bottom: 0.5rem;*/
+}
+
+.category-title {
+    margin-bottom: 0.5rem;
+    align-self: flex-start;
+    font-size: larger;
+}
+
+.issue {
+    position: relative;
+    border: 1px solid;
+    border-radius: 5px;
+    background-color: white;
+    margin-bottom: 0.5rem;
+    padding: 0.2rem;
+    width: 100%;
+    cursor: pointer;
+}
+
+.issue:hover {
+    background-color: lightblue;
+}
+
+.issue a {
+    display: block;
+}
+
+.priority {
+    /*position: absolute;
+    top: 0;
+    left: 0;*/
+    height: 100%;
+    padding: 0 0.4rem;
+    /*padding: 0.2rem 0.4rem;*/
+    border: 1px solid;
+    border-radius: 5px;
+    background-color: lightgray;
+}
+
+.issue-title {
+    margin-left: 0.5rem;
+}
+
+/*
 .issue-card {
     position: relative;
     display: flex;
@@ -103,3 +159,4 @@
     height: 10.5rem;
     overflow: hidden;
 }
+*/
