--- a/app/src/app/dashboard/dashboard.component.html
+++ b/app/src/app/dashboard/dashboard.component.html
@@ -5,18 +5,24 @@
         <input type="number" #priorityFilterValue class="number-input-quantity" min="1" max="10" value="1" id="filter-priority">
         <button class="number-input-button number-input-plus" onClick="this.parentNode.querySelector('input[type=number]').stepUp()"><i class="fa-solid fa-plus"></i></button>
     </div>
+    <!--TODO: Add a multi-select for category filters
+        <label for="filter-category">Category:</label>
+    -->
     <button type="button" class="button" (click)="filterIssues()">Apply Filter</button>
 </div>
 <div class="dashboard">
-    <a *ngFor="let issue of filteredIssues" routerLink="/issues/detail/{{issue.id}}">
-        <div class="issue-card" [ngStyle]="{'background-color': issue.categoryColor}">
-            <div class="card-outline"></div>
-            <div class="card-priority">{{issue.priority}}</div>
-            <div class="card-title">{{issue.title}}</div>
-            <div class="card-details" [innerHtml]="issue.description"></div>
+    <div *ngFor="let category of categories">
+        <div class="category-card" [ngStyle]="{'background-color': category.color}">
+            <span class="category-title">{{category.name}}</span>
+            <div class="issue" *ngFor="let issue of filteredIssues[category.id!]">
+                <a routerLink="/issues/detail/{{issue.id}}">
+                    <span class="priority">{{issue.priority}}</span>
+                    <span class="issue-title">{{issue.title}}</span>
+                </a>
+            </div>
         </div>
-    </a>
+    </div>
 </div>
-<div class="categories-bar">
+<!--<div class="categories-bar">
     <app-categories-bar></app-categories-bar>
-</div>
+</div>-->
