--- a/app/src/app/projects-detail/projects-detail.component.html
+++ b/app/src/app/projects-detail/projects-detail.component.html
@@ -1,6 +1,24 @@
-<span *ngIf="project">{{project.project!.name}}</span>
-<ul *ngIf="users">
-    <li *ngFor="let user of users">
-        <span>{{user.appUser.name}}</span>
-    </li>
-</ul>
+<div *ngIf="project">
+    <div class="project-details">
+        <label for="name">Name:</label>
+        <input type="text" class="text-field" id="name" name="name" [(ngModel)]="project.name">
+    </div>
+    <div class="project-add-user">
+        <label for="add-user">Add User By Email:</label>
+        <input type="text" class="text-field" id="add-user" name="add-user" [(ngModel)]="addUserEmail">
+        <a class="control-button add-user-button" (click)="addUser()"><i class="fa-solid fa-plus fa-fw"></i></a>
+    </div>
+    <div class="project-users">
+        <label for="users-list">Users:</label>
+        <ul class="users-list">
+            <li *ngFor="let user of users">
+                <span>{{user.name}}</span>
+                <span class="control-button delete-button"><a (click)="deleteUser(user)"><i class="fa-solid fa-minus fa-fw"></i></a></span>
+            </li>
+        </ul>
+    </div>
+    <div class="control-buttons">
+        <button type="button" class="button" (click)="goBack()">Cancel</button>
+        <button type="button" class="button" (click)="save()">Save</button>
+    </div>
+</div>
